changed header and footer part

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,9 +1,9 @@
-
 </div>
 <div class="footer-padding"></div>
-  <div class="footer">
-    <p>Made with ❤️ by The Aryan Dev</p>
-  </div>
+<div class="footer">
+  <p>Made with ❤️ by Aryan Dev</p>
+</div>
 </div>
 </body>
+
 </html>
